# CryptoInvestorDemo

backend/: .env  Dockerfile  README.md  TESTING.md  main.py  plot.py  pyproject.toml  requirements.txt
backend/app/: app.py  config.py  logger.py  schemas.py
backend/core/: README.md  __init__.py
backend/core/db/: __init__.py  delta_controller.py  postgres_controller.py  sqlalchemy_controller.py
backend/core/models/: __init__.py  schemas.py
backend/core/services/: __init__.py  crypto_analytics.py
backend/logs/: .gitkeep
backend/static/: index.html
backend/static/assets/: .gitkeep
backend/tests/: TODO.md  calculate_benchmark.py  conftest.py  generate_expected_results.py  sql_alchemy.py  test_app.py
backend/tests/core/: __init__.py  test_crypto_analytics.py  test_delta_controller.py
backend/tests/expected_results/: address_balance_result.json  address_transactions_result.json  benchmark_metrics_result.json
backend/tests/fixtures/: __init__.py  quotes.csv  sample_data.py
frontend/: tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DataTable.tsx  Header.tsx
frontend/src/data/: topBalance.json  topProfit.json
frontend/src/pages/: IconPicker.tsx  Index.tsx  TopBalance.tsx  TopProfit.tsx
plans/: crypto_analytics_architecture.md
