[project]
name = "minimal-fastapi-skeleton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "fastapi==0.117.1",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "pydantic==2.11.9",
    "python-multipart==0.0.20",
    "uvicorn==0.34.0",
]
