[project]
name = "minimal-fastapi-skeleton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "deltalake==0.25.5",
    "empyrical-reloaded==0.5.12",
    "fastapi==0.117.1",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "numpy==2.3.2",
    "pandas==2.2.3",
    "polars==1.22.0",
    "pyarrow==18.1.0",
    "pydantic==2.11.9",
    "pyfolio-reloaded==0.9.9",
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "python-multipart==0.0.20",
    "uvicorn==0.34.0",
]
